Fix Overflow

--- a/src/styles/commons.scss
+++ b/src/styles/commons.scss
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   @include typo-body;
   overflow-x: hidden;
